--- a/index.html
+++ b/index.html
@@ -11,79 +11,91 @@
 </head>
 
 <body>
-  <header>
+  <main class="container">
     <h1 id="title"> Coffee Survey</h1>
     <p id="description">Survey for coffee lovers.</p>
-  </header>
-  <main class="container">
     <form id="survey-form" autocomplete="on" action="index.html" method="post">
       <!-- NAME -->
-      <div class="labels">
-        <label for="name" id="name-label">Full name:</label>
-      </div>
-      <div class="responses">
-        <input type="text" id="name" name="name" placeholder="Enter your name" required>
+      <div class="section">
+        <div class="labels">
+          <label for="name" id="name-label">Full name:</label>
+        </div>
+        <div class="responses">
+          <input type="text" id="name" name="name" placeholder="Enter your name" required>
+        </div>
       </div>
       <!-- EMAIL -->
-      <div class="labels">
-        <label for="email" id="email-label">E-mail:</label>
-      </div>
-      <div class="responses">
-        <input type="email" id="email" name="email" placeholder="Enter your e-mail" required>
+      <div class="section">
+        <div class="labels">
+          <label for="email" id="email-label">E-mail:</label>
+        </div>
+        <div class="responses">
+          <input type="email" id="email" name="email" placeholder="Enter your e-mail" required>
+        </div>
       </div>
       <!-- NUMBER (age) -->
-      <div class="labels">
-        <label for="number" id="number-label">Age:</label>
-      </div>
-      <div class="responses">
-        <input type="number" id="number" name="age" min="1" max="130" placeholder="Enter your age" required>
+      <div class="section">
+        <div class="labels">
+          <label for="number" id="number-label">Age:</label>
+        </div>
+        <div class="responses">
+          <input type="number" id="number" name="age" min="1" max="130" placeholder="Enter your age" required>
+        </div>
       </div>
       <!-- DROPDOWN (how many cups) -->
-      <div class="labels">
-        <label for="dropdown">How many cups of coffee do you usually drink per day:</label>
-      </div>
-      <div class="responses">
-        <select class="cups" id="dropdown" name="cups">
-          <option disabled value>select what applies</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="more">more than 5</option>
-        </select>
+      <div class="section">
+        <div class="labels">
+          <label for="dropdown">How many cups of coffee do you usually drink per day:</label>
+        </div>
+        <div class="responses">
+          <select class="cups" id="dropdown" name="cups">
+            <option disabled value>select what applies</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="more">more than 5</option>
+          </select>
+        </div>
       </div>
       <!-- CHECKBOXES (period of day)-->
-      <div class="labels">
-        <label>Tell us more about yourself or about your coffee passion:</label>
-      </div>
-      <div class="responses">
-        <label><input type="checkbox" name="period" value="Morning">Morning</label> <br>
-        <label><input type="checkbox" name="period" value="Afternoon">Afternoon</label> <br>
-        <label><input type="checkbox" name="period" value="Evening">Evening</label> <br>
-        <label><input type="checkbox" name="period" value="Night">Night</label> <br>
+      <div class="section">
+        <div class="labels">
+          <label>Tell us more about yourself or about your coffee passion:</label>
+        </div>
+        <div class="responses">
+          <label><input type="checkbox" name="period" value="Morning">Morning</label> <br>
+          <label><input type="checkbox" name="period" value="Afternoon">Afternoon</label> <br>
+          <label><input type="checkbox" name="period" value="Evening">Evening</label> <br>
+          <label><input type="checkbox" name="period" value="Night">Night</label> <br>
+        </div>
       </div>
       <!-- RADIO BUTTONS (favourite) -->
-      <div class="labels">
-        <label>What is your favourite coffee drink?</label>
-      </div>
-      <div class="responses">
-        <label><input type="radio" name="favourite" value="espresso" required>Espresso </label> <br>
-        <label><input type="radio" name="favourite" value="ristretto">Ristretto </label> <br>
-        <label><input type="radio" name="favourite" value="americano">Americano </label> <br>
-        <label><input type="radio" name="favourite" value="latte">Café Latte </label> <br>
-        <label><input type="radio" name="favourite" value="cappuccino">Cappuccino </label> <br>
-        <label><input type="radio" name="favourite" value="macchiato">Macchiato </label> <br>
-        <label><input type="radio" name="favourite" value="mocha">Mocha </label> <br>
-        <label><input type="radio" name="favourite" value="flatwhite">Flat White </label> <br>
-        <label><input type="radio" name="favourite" value="other">Other </label> <br>
+      <div class="section">
+        <div class="labels">
+          <label>What is your favourite coffee drink?</label>
+        </div>
+        <div class="responses">
+          <label><input type="radio" name="favourite" value="espresso" required>Espresso </label> <br>
+          <label><input type="radio" name="favourite" value="ristretto">Ristretto </label> <br>
+          <label><input type="radio" name="favourite" value="americano">Americano </label> <br>
+          <label><input type="radio" name="favourite" value="latte">Café Latte </label> <br>
+          <label><input type="radio" name="favourite" value="cappuccino">Cappuccino </label> <br>
+          <label><input type="radio" name="favourite" value="macchiato">Macchiato </label> <br>
+          <label><input type="radio" name="favourite" value="mocha">Mocha </label> <br>
+          <label><input type="radio" name="favourite" value="flatwhite">Flat White </label> <br>
+          <label><input type="radio" name="favourite" value="other">Other </label> <br>
+        </div>
       </div>
       <!-- TEXTAREA (comments)-->
-      <div class="labels">
-        <label for="comment">Let us know more about what do you like about coffee:</label>
-      </div>
-      <div class="responses">
-        <textarea id="comment" name="comment" rows="5" cols="50"></textarea>
+      <div class="section">
+        <div class="labels">
+          <label for="comment">Let us know more about what do you like about coffee:</label>
+        </div>
+        <div class="responses">
+          <textarea id="comment" name="comment" rows="5" cols="50"></textarea>
+        </div>
       </div>
       <!-- SUBMIT BUTTON -->
       <div class="button">
@@ -91,9 +103,6 @@
       </div>
     </form>
   </main>
-  <footer>
-    <p>© coded by Hana Klingová</p>
-  </footer>
 </body>
 
 </html>
