--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main class="container">
     <h1 id="title"> Coffee Survey</h1>
     <p id="description">Survey for coffee lovers.</p>
-    <form id="survey-form" autocomplete="on" action="index.html" method="post">
+    <form id="survey-form" autocomplete="on">
       <!-- NAME -->
       <div class="section">
         <div class="labels">
