add script tag with FCC tests

--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
     </form>
   </main>
 </body>
+<script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
 
 </html>
