--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
           <label>Tell us more about yourself or about your coffee passion:</label>
         </div>
         <div class="responses">
-          <label><input type="checkbox" name="period" value="Morning">Morning</label> <br>
-          <label><input type="checkbox" name="period" value="Afternoon">Afternoon</label> <br>
-          <label><input type="checkbox" name="period" value="Evening">Evening</label> <br>
-          <label><input type="checkbox" name="period" value="Night">Night</label> <br>
+          <label class="tag"><input type="checkbox" name="period" value="Morning">Morning</label> <br>
+          <label class="tag"><input type="checkbox" name="period" value="Afternoon">Afternoon</label> <br>
+          <label class="tag"><input type="checkbox" name="period" value="Evening">Evening</label> <br>
+          <label class="tag"><input type="checkbox" name="period" value="Night">Night</label> <br>
         </div>
       </div>
       <!-- RADIO BUTTONS (favourite) -->
@@ -77,15 +77,15 @@
           <label>What is your favourite coffee drink?</label>
         </div>
         <div class="responses">
-          <label><input type="radio" name="favourite" value="espresso" required>Espresso </label> <br>
-          <label><input type="radio" name="favourite" value="ristretto">Ristretto </label> <br>
-          <label><input type="radio" name="favourite" value="americano">Americano </label> <br>
-          <label><input type="radio" name="favourite" value="latte">Café Latte </label> <br>
-          <label><input type="radio" name="favourite" value="cappuccino">Cappuccino </label> <br>
-          <label><input type="radio" name="favourite" value="macchiato">Macchiato </label> <br>
-          <label><input type="radio" name="favourite" value="mocha">Mocha </label> <br>
-          <label><input type="radio" name="favourite" value="flatwhite">Flat White </label> <br>
-          <label><input type="radio" name="favourite" value="other">Other </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="espresso" required>Espresso </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="ristretto">Ristretto </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="americano">Americano </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="latte">Café Latte </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="cappuccino">Cappuccino </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="macchiato">Macchiato </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="mocha">Mocha </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="flatwhite">Flat White </label> <br>
+          <label class="tag"><input type="radio" name="favourite" value="other">Other </label> <br>
         </div>
       </div>
       <!-- TEXTAREA (comments)-->
