add modal window

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <label for="comment">Let us know more about yourself and your coffee habits:</label>
         </div>
         <div class="responses">
-          <textarea id="comment" name="comment" rows="5" cols="50"></textarea>
+          <textarea id="comment" name="comment" rows="5" cols="50" placeholder="Your message..."></textarea>
         </div>
       </div>
       <!-- SUBMIT BUTTON -->
@@ -103,8 +103,16 @@
         <button id="submit" type="submit" name="submitBtn">Submit</button>
       </div>
     </form>
+    <!-- MODAL WINDOW -->
+    <div class="modal">
+      <div class="modalMessage">
+        <p>Thanks for your submission.</p>
+        <button id="newForm" type="submit" name="newForm">Submit new response</button>
+      </div>
+    </div>
   </main>
 </body>
+<script src="js/script.js"></script>
 <script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
 
 </html>
