correct the question

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- CHECKBOXES (period of day)-->
       <div class="section">
         <div class="labels">
-          <label>Tell us more about yourself or about your coffee passion:</label>
+          <label>When do you usually drink coffee:</label>
         </div>
         <div class="responses">
           <label class="tag"><input type="checkbox" name="period" value="Morning">Morning</label> <br>
