change the container bg color to lighter, add new question and add padding to the bottom of the page

--- a/index.html
+++ b/index.html
@@ -60,18 +60,6 @@
           </select>
         </div>
       </div>
-      <!-- CHECKBOXES (period of day)-->
-      <div class="section">
-        <div class="labels">
-          <label>When do you usually drink coffee:</label>
-        </div>
-        <div class="responses">
-          <label class="tag"><input type="checkbox" name="period" value="Morning">Morning</label> <br>
-          <label class="tag"><input type="checkbox" name="period" value="Afternoon">Afternoon</label> <br>
-          <label class="tag"><input type="checkbox" name="period" value="Evening">Evening</label> <br>
-          <label class="tag"><input type="checkbox" name="period" value="Night">Night</label> <br>
-        </div>
-      </div>
       <!-- RADIO BUTTONS (favourite) -->
       <div class="section">
         <div class="labels">
@@ -89,13 +77,37 @@
           <label class="tag"><input type="radio" name="favourite" value="other">Other </label> <br>
         </div>
       </div>
+      <!-- CHECKBOXES (period of day)-->
+      <div class="section">
+        <div class="labels">
+          <label>When do you usually drink coffee:</label>
+        </div>
+        <div class="responses">
+          <label class="tag"><input type="checkbox" name="period" value="Morning">Morning</label> <br>
+          <label class="tag"><input type="checkbox" name="period" value="Afternoon">Afternoon</label> <br>
+          <label class="tag"><input type="checkbox" name="period" value="Evening">Evening</label> <br>
+          <label class="tag"><input type="checkbox" name="period" value="Night">Night</label> <br>
+        </div>
+      </div>
+      <!-- CHECKBOXES (where)-->
+      <div class="section">
+        <div class="labels">
+          <label>Where do you usually drink coffee:</label>
+        </div>
+        <div class="responses">
+          <label class="tag"><input type="checkbox" name="place" value="Morning">At home</label> <br>
+          <label class="tag"><input type="checkbox" name="place" value="Afternoon">At work</label> <br>
+          <label class="tag"><input type="checkbox" name="place" value="Evening">On my way (coffee to go)</label> <br>
+          <label class="tag"><input type="checkbox" name="place" value="Night">In restaurant</label> <br>
+        </div>
+      </div>
       <!-- TEXTAREA (comments)-->
       <div class="section">
         <div class="labels">
           <label for="comment">Let us know more about yourself and your coffee habits:</label>
         </div>
         <div class="responses">
-          <textarea id="comment" name="comment" rows="5" cols="50" placeholder="Your message..."></textarea>
+          <textarea id="comment" name="comment" rows="5" cols="50" placeholder="Your message for us..."></textarea>
         </div>
       </div>
       <!-- SUBMIT BUTTON -->
